--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -338,6 +338,12 @@ Section three
 	@include desktop{
 		width: 45%;
 	}
+	&--one{
+		@include desktop{height: 411px;}
+	}
+	&--two{
+		@include desktop{height: 491px;}
+	}
 	&__title{
 		color: #fff;
 		font-weight: bold;
@@ -378,7 +384,7 @@ Section three
 		border-top: none;
 		text-align: justify;
 		line-height: 1.5;
-		font-size: 13px;
+		font-size: 16px;
 		@include desktop{
 			line-height: 1.8;
 			font-size: 18px;
@@ -454,16 +460,18 @@ Section three
 	width: 179px;
 	height: 40px;
 	position: relative;
-	top: -102.8%;
-	//left: 0;
-	@include smartphone{
-		//top: -482px;
-	}
+	margin-top: -54px;
+	margin-bottom: 10px;
 }
 
 .box-red--deco-3 {
-	background: url('../img/graffe.png') no-repeat;
-	display: none;
+	background: url('../img/graffe.png') no-repeat right;
+	width: 100%;
+	height: 54px;
+	position: relative;
+	float: left;
+	margin-top: -54px;
+	top: 87px;
 }
 
 
