--- a/css/styles.css
+++ b/css/styles.css
@@ -492,6 +492,18 @@ Section three
   }
 }
 
+@media (min-width: 960px) {
+  .box-red--one {
+    height: 411px;
+  }
+}
+
+@media (min-width: 960px) {
+  .box-red--two {
+    height: 491px;
+  }
+}
+
 .box-red__title {
   color: #fff;
   font-weight: bold;
@@ -541,7 +553,7 @@ Section three
   border-top: none;
   text-align: justify;
   line-height: 1.5;
-  font-size: 13px;
+  font-size: 16px;
 }
 
 @media (min-width: 960px) {
@@ -637,12 +649,18 @@ Section three
   width: 179px;
   height: 40px;
   position: relative;
-  top: -102.8%;
+  margin-top: -54px;
+  margin-bottom: 10px;
 }
 
 .box-red--deco-3 {
-  background: url("../img/graffe.png") no-repeat;
-  display: none;
+  background: url("../img/graffe.png") no-repeat right;
+  width: 100%;
+  height: 54px;
+  position: relative;
+  float: left;
+  margin-top: -54px;
+  top: 87px;
 }
 
 /*
