--- a/jade/index.jade
+++ b/jade/index.jade
@@ -62,15 +62,17 @@ html(lang="en")
 
       section.l-box
         .three
-          .box-red
+          .box-red.box-red--one
             .box-red__title LA NOSTRA STORIA
             .box-red__tab IERI
             .box-red__tab.box-red__tab--no-select OGGI
             .box-red__tab.box-red__tab--no-select DOMANI
             .box-red__content Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.
             .box-red--deco-1
+            .box-red--deco-3
 
-          .box-red
+          .box-red.box-red--two
+            .box-red--deco-2
             .box-red__title QUELLO CHE FACCIAMO
             .box-red__list
               h2.h2 PROGETTO INTEGRATO<br>"MAI SOLI CON UN LIBRO"
@@ -83,8 +85,6 @@ html(lang="en")
                 li C.A.S.SCO
                 li V.I.S.
             .box-red__bottom E CHE GI&Agrave; ABBIAMO FATTO [] Apri il PDF
-            .box-red--deco-2
-            .box-red--deco-3
       
       section.l-box
         .four
