--- a/jade/index.jade
+++ b/jade/index.jade
@@ -64,10 +64,13 @@ html(lang="en")
         .three
           .box-red.box-red--one
             .box-red__title LA NOSTRA STORIA
-            .box-red__tab IERI
-            .box-red__tab.box-red__tab--no-select OGGI
-            .box-red__tab.box-red__tab--no-select DOMANI
-            .box-red__content Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.
+            .box-red__tab.tab-ieri IERI
+            .box-red__tab.tab-oggi.box-red__tab--active OGGI
+            .box-red__tab.tab-domani.box-red__tab--active DOMANI
+            .box-red__content 
+              p.p-ieri Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.
+              p.p-oggi.h-d-none Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.
+              p.p-domani.h-d-none Form-art &egrave; nata con l'intento di diffondere la cultura attraverso attivit&agrave; legate al territorio e di creare un gruppo eterogeneo, per provenienza sociale en et&agrave;, legato dalla passione per le arti.
             .box-red--deco-1
             .box-red--deco-3
 
@@ -84,7 +87,7 @@ html(lang="en")
                 li BIBLIO-INFORM@ART
                 li C.A.S.SCO
                 li V.I.S.
-            .box-red__bottom E CHE GI&Agrave; ABBIAMO FATTO [] Apri il PDF
+            .box-red__bottom E CHE GI&Agrave; ABBIAMO FATTO <img src="img/icon-doc.png" /> Apri il PDF
       
       section.l-box
         .four
