--- a/jade/index.jade
+++ b/jade/index.jade
@@ -88,6 +88,18 @@ html(lang="en")
                 li C.A.S.SCO
                 li V.I.S.
             .box-red__bottom E CHE GI&Agrave; ABBIAMO FATTO <img src="img/icon-doc.png" /> Apri il PDF
+
+          .box-red__tab-mask.h-d-none
+            .box-red__tab-mask__container
+              i.icon.box-red__tab-mask__icon &#10006;
+              h3 IL LIBRO RITROVATO
+              p Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa.
+
+          .box-red__tab-mask.h-d-none
+            .box-red__tab-mask__container
+              i.icon.box-red__tab-mask__icon &#10006;
+              h3 UN LIBRO AL SOLE
+              p Lorem Ipsum è un testo segnaposto utilizzato nel settore della tipografia e della stampa.
       
       section.l-box
         .four
