--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -71,10 +71,20 @@ Main Header Elements
 	}
 }
 
-$height-nav:110px;
+$height-nav:124px;
 .nav-bullet {
 	height: $height-nav;
 	padding-top: 75px;
+	padding-right: 3%;
+	padding-left: 3%;
+	@include smartphone{
+		padding-right: 10%;
+		padding-left: 10%;
+	}
+	@include tablet{
+		padding-right: 20%;
+		padding-left: 20%;
+	}
 	@include desktop {
 		display: none;
 	}
@@ -87,8 +97,8 @@ $height-nav:110px;
 }
 .header__bullet {
 	border: 2px solid $blue-main;
-	width:17px;
-	height:17px;
+	width:19px;
+	height:19px;
 	border-radius: 50%;
 	cursor: pointer;
 	&--active{
@@ -195,7 +205,7 @@ Section one
 }
 
 .welcome-head {
-	margin-top: 20px;
+	margin-top: 35px;
 	@include tablet {
 		display: none;
 	}
@@ -457,6 +467,57 @@ Section three
 		}
 		@include smartphone{
 			font-size: 16px;
+		}
+	}
+	&__tab-mask{
+		position: absolute;
+		background: #f2f2f2;
+		//padding: 30px 40px;
+		width: 90%;
+		height: 398px;
+		left: 5%;
+		margin-top: 125px;
+		@include tablet{
+			left: 12.5%;
+			width: 75%;
+			height: 441px;
+			margin-top: 139px;
+		}
+		@include desktop{
+			left: auto;
+			margin-left: -437px;
+			width: 414px;
+			height: 435px;
+		}
+		&__container{
+			border: 2px solid #df5227;
+			margin: 20px;
+			border-radius: 8px;
+			padding: 70px 15px 15px;
+			background: #fff;
+			color: #666;
+			height: 90%;
+			overflow-y: hidden;
+			h3{
+				margin-bottom: 15px;
+			}
+			p {
+				padding-right: 38px;
+				overflow-y: scroll;
+				height: 267px;
+			}
+		}
+		&__icon{
+			float: right;
+			margin-top: -70px;
+			margin-right: -3px;
+			font-size: 30px;
+			color: #df5227;
+			cursor: pointer;
+			transition: all 0.3s linear;
+			&:hover{
+				transform: scale(1.2,1.2);
+			}
 		}
 	}
 }
