Slide four - first relase - Height content--back needs to be fixed

--- a/jade/index.jade
+++ b/jade/index.jade
@@ -103,6 +103,16 @@ html(lang="en")
       
       section.l-box
         .four
+          .become
+            .become__title DIVENTA PARTE DELLA NOSTRA COMUNIT&Agrave;
+          
+            .become__content-container
+              .become__content--back
+              .become__content Stiamo cercando <b>persone propositive</b>, interessate a intraprendere un <b>percorso di creazione di valore nella societ&agrave;</b>. L'et&agrave; non &egrave; importante, <b>tutti possono contribuire</b>.
+              .become__content--bullet
+          
+            .become__footer PARTECIPA AL CAMBIAMENTO. DIVENTA PROTAGONISTA.
+          
     
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
