--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -563,3 +563,118 @@ Section four
 	@extend .box;
 }
 
+.become{
+	padding-top: 5px;
+	background: url('../img/people-large.png') center 455px no-repeat;
+	@include smartphone{
+		background: url('../img/people-large.png') center 380px no-repeat;
+	}
+	@include tablet{
+		background: url('../img/people-large.png') center 315px no-repeat;
+	}
+	@include desktop{
+		padding: 35px 0 0;
+		background: url('../img/scissors.png') -8% 70px no-repeat, url('../img/people-large.png') center 355px no-repeat;
+	}
+	&__title{
+		width: 90%;
+		margin: 35px auto;
+		padding: 7px;
+		background: #fff;
+		border-radius: 5px;
+		color: #3cb647;
+		font-size: 20px;
+		text-align: center;
+		font-weight: bold;
+		letter-spacing: 1px;
+		@include tablet {
+			width: 550px;
+			padding: 15px;
+			font-size: 23px;
+		}
+	}
+	&__content-container{
+		margin: 0 auto 500px;
+		@include tablet{
+			width: 550px;
+			height: 182px;
+			margin-bottom: 170px;
+		}
+	}
+	&__content{
+		position: absolute;
+		margin: 0 5%;
+		padding: 25px 25px 20px;
+		color: #fff;
+		font-size: 16px;
+		text-align: center;
+		line-height: 1.5;
+		letter-spacing: 1px;
+		border: 3px solid #fff;
+		border-radius: 6px;
+		background-color: #3cb647;
+		box-shadow: 10px 8px 0px rgba(0,0,0,0.2);
+		@include smartphone{
+			font-size: 22px;
+		}
+		@include tablet{
+			margin: 0 -5%;
+			width: 80%;
+		}
+		@include desktop{
+			width: 550px;
+			margin: 0;
+		}
+		&--back{
+			@extend .become__content;
+			transform: rotate(-3.5deg);
+			width: 90.5%;
+			height: 43%;
+			margin-top: -8px;
+			@include tablet{
+				transform: rotate(-1.5deg);
+				width: 80%;
+				margin: 0 -5%;
+				height: 155px;
+			}
+			@include desktop{
+				width: 550px;
+				margin: 0;
+				height: 185px;
+			}
+		}
+		&--bullet{
+			position: absolute;
+			width: 20px;
+			height: 20px;
+			margin: 10px 28px;
+			border-radius: 50%;
+			border: 4px solid #fff;
+			background-color: #b5babd;
+			@include smartphone{
+				margin: 15px 8%;
+			}
+			@include tablet{
+				margin: 15px -3%;
+			}
+		}
+	}
+	&__footer{
+		width: auto;
+		margin: 0 5%;
+		text-align: center;
+		//padding: 45px 0 50px;
+		background: #3cb647;
+		border-radius: 5px;
+		font-weight: bold;
+		color: #fff;
+		text-decoration: none;
+		font-size: 18px;
+		padding: 5px 15px;
+		@include smartphone{
+			font-size: 24px;
+			padding: 15px 25px;
+		}
+	}
+}
+
