--- a/css/styles.css
+++ b/css/styles.css
@@ -781,3 +781,160 @@ Section three
 /*
 Section four
 */
+.become {
+  padding-top: 5px;
+  background: url("../img/people-large.png") center 455px no-repeat;
+}
+
+@media (min-width: 480px) {
+  .become {
+    background: url("../img/people-large.png") center 380px no-repeat;
+  }
+}
+
+@media (min-width: 768px) {
+  .become {
+    background: url("../img/people-large.png") center 315px no-repeat;
+  }
+}
+
+@media (min-width: 960px) {
+  .become {
+    padding: 35px 0 0;
+    background: url("../img/scissors.png") -8% 70px no-repeat, url("../img/people-large.png") center 355px no-repeat;
+  }
+}
+
+.become__title {
+  width: 90%;
+  margin: 35px auto;
+  padding: 7px;
+  background: #fff;
+  border-radius: 5px;
+  color: #3cb647;
+  font-size: 20px;
+  text-align: center;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+@media (min-width: 768px) {
+  .become__title {
+    width: 550px;
+    padding: 15px;
+    font-size: 23px;
+  }
+}
+
+.become__content-container {
+  margin: 0 auto 500px;
+}
+
+@media (min-width: 768px) {
+  .become__content-container {
+    width: 550px;
+    height: 182px;
+    margin-bottom: 170px;
+  }
+}
+
+.become__content, .become__content--back {
+  position: absolute;
+  margin: 0 5%;
+  padding: 25px 25px 20px;
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  border: 3px solid #fff;
+  border-radius: 6px;
+  background-color: #3cb647;
+  box-shadow: 10px 8px 0px rgba(0, 0, 0, 0.2);
+}
+
+@media (min-width: 480px) {
+  .become__content, .become__content--back {
+    font-size: 22px;
+  }
+}
+
+@media (min-width: 768px) {
+  .become__content, .become__content--back {
+    margin: 0 -5%;
+    width: 80%;
+  }
+}
+
+@media (min-width: 960px) {
+  .become__content, .become__content--back {
+    width: 550px;
+    margin: 0;
+  }
+}
+
+.become__content--back {
+  transform: rotate(-3.5deg);
+  width: 90.5%;
+  height: 43%;
+  margin-top: -8px;
+}
+
+@media (min-width: 768px) {
+  .become__content--back {
+    transform: rotate(-1.5deg);
+    width: 80%;
+    margin: 0 -5%;
+    height: 155px;
+  }
+}
+
+@media (min-width: 960px) {
+  .become__content--back {
+    width: 550px;
+    margin: 0;
+    height: 185px;
+  }
+}
+
+.become__content--bullet {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  margin: 10px 28px;
+  border-radius: 50%;
+  border: 4px solid #fff;
+  background-color: #b5babd;
+}
+
+@media (min-width: 480px) {
+  .become__content--bullet {
+    margin: 15px 8%;
+  }
+}
+
+@media (min-width: 768px) {
+  .become__content--bullet {
+    margin: 15px -3%;
+  }
+}
+
+.become__footer {
+  width: auto;
+  margin: 0 5%;
+  text-align: center;
+  background: #3cb647;
+  border-radius: 5px;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+  font-size: 18px;
+  padding: 5px 15px;
+}
+
+@media (min-width: 480px) {
+  .become__footer {
+    font-size: 24px;
+    padding: 15px 25px;
+  }
+}
