--- a/jade/index.jade
+++ b/jade/index.jade
@@ -113,8 +113,12 @@ html(lang="en")
           
             .become__footer PARTECIPA AL CAMBIAMENTO. DIVENTA PROTAGONISTA.
           
-    
+    .controller
+      .a 
+      .b 
+      .c
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    script(src="js/test.js")
+    script(src="js/headerBulletMenu__hide-show.js")
