--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -77,6 +77,7 @@ $height-nav:124px;
 	padding-top: 75px;
 	padding-right: 3%;
 	padding-left: 3%;
+	transition: all 0.5s linear;
 	@include smartphone{
 		padding-right: 10%;
 		padding-left: 10%;
@@ -91,6 +92,8 @@ $height-nav:124px;
 }
 .nav-main{
 	margin-top: -($height-nav);
+	position: relative;
+	transition: all 0.5s linear;
 	@include desktop {
 		margin-top: 0;
 	}
@@ -604,7 +607,7 @@ Section four
 	&__content{
 		position: absolute;
 		margin: 0 5%;
-		padding: 25px 25px 20px;
+		padding: 25px 35px 20px;
 		color: #fff;
 		font-size: 16px;
 		text-align: center;
@@ -615,39 +618,35 @@ Section four
 		background-color: #3cb647;
 		box-shadow: 10px 8px 0px rgba(0,0,0,0.2);
 		@include smartphone{
-			font-size: 22px;
+			font-size: 20px;
+			padding: 25px 45px 20px;
 		}
 		@include tablet{
-			margin: 0 -5%;
-			width: 80%;
+			margin: 0 10% 0 -5%;
+			font-size: 22px;
 		}
 		@include desktop{
-			width: 550px;
-			margin: 0;
+			width: 650px;
+			margin: 0 -5%;
 		}
 		&--back{
 			@extend .become__content;
-			transform: rotate(-3.5deg);
-			width: 90.5%;
-			height: 43%;
-			margin-top: -8px;
+			transform: rotate(-2.5deg);
+			width: 90.3%;
+			margin-top: -4px;
 			@include tablet{
 				transform: rotate(-1.5deg);
-				width: 80%;
-				margin: 0 -5%;
-				height: 155px;
+				width: 77%;
 			}
 			@include desktop{
-				width: 550px;
-				margin: 0;
-				height: 185px;
+				width: 650px;
 			}
 		}
 		&--bullet{
 			position: absolute;
 			width: 20px;
 			height: 20px;
-			margin: 10px 28px;
+			margin: 12px 28px;
 			border-radius: 50%;
 			border: 4px solid #fff;
 			background-color: #b5babd;
@@ -657,13 +656,15 @@ Section four
 			@include tablet{
 				margin: 15px -3%;
 			}
+			@include desktop{
+				margin: 10px -40px;
+			}
 		}
 	}
 	&__footer{
 		width: auto;
 		margin: 0 5%;
 		text-align: center;
-		//padding: 45px 0 50px;
 		background: #3cb647;
 		border-radius: 5px;
 		font-weight: bold;
