--- a/css/styles.css
+++ b/css/styles.css
@@ -2,12 +2,39 @@
   display: none;
 }
 
+.h-d-block {
+  display: block;
+}
+
 .h-f-right {
   float: right;
 }
 
 .icon {
   font-style: normal;
+}
+
+.controller {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  margin: 120px auto 0;
+  font-size: 45px;
+  font-weight: bold;
+  color: #000;
+  text-align: center;
+  opacity: 0.7;
+}
+
+@media (min-width: 960px) {
+  .controller {
+    margin-top: 180px;
+  }
+}
+
+.controller > div {
+  width: 100%;
 }
 
 * {
@@ -170,6 +197,7 @@ Main Header Elements
   padding-top: 75px;
   padding-right: 3%;
   padding-left: 3%;
+  transition: all 0.5s linear;
 }
 
 @media (min-width: 480px) {
@@ -194,6 +222,8 @@ Main Header Elements
 
 .nav-main {
   margin-top: -124px;
+  position: relative;
+  transition: all 0.5s linear;
 }
 
 @media (min-width: 960px) {
@@ -841,7 +871,7 @@ Section four
 .become__content, .become__content--back {
   position: absolute;
   margin: 0 5%;
-  padding: 25px 25px 20px;
+  padding: 25px 35px 20px;
   color: #fff;
   font-size: 16px;
   text-align: center;
@@ -855,45 +885,41 @@ Section four
 
 @media (min-width: 480px) {
   .become__content, .become__content--back {
-    font-size: 22px;
+    font-size: 20px;
+    padding: 25px 45px 20px;
   }
 }
 
 @media (min-width: 768px) {
   .become__content, .become__content--back {
-    margin: 0 -5%;
-    width: 80%;
+    margin: 0 10% 0 -5%;
+    font-size: 22px;
   }
 }
 
 @media (min-width: 960px) {
   .become__content, .become__content--back {
-    width: 550px;
-    margin: 0;
+    width: 650px;
+    margin: 0 -5%;
   }
 }
 
 .become__content--back {
-  transform: rotate(-3.5deg);
-  width: 90.5%;
-  height: 43%;
-  margin-top: -8px;
+  transform: rotate(-2.5deg);
+  width: 90.3%;
+  margin-top: -4px;
 }
 
 @media (min-width: 768px) {
   .become__content--back {
     transform: rotate(-1.5deg);
-    width: 80%;
-    margin: 0 -5%;
-    height: 155px;
+    width: 77%;
   }
 }
 
 @media (min-width: 960px) {
   .become__content--back {
-    width: 550px;
-    margin: 0;
-    height: 185px;
+    width: 650px;
   }
 }
 
@@ -901,7 +927,7 @@ Section four
   position: absolute;
   width: 20px;
   height: 20px;
-  margin: 10px 28px;
+  margin: 12px 28px;
   border-radius: 50%;
   border: 4px solid #fff;
   background-color: #b5babd;
@@ -916,6 +942,12 @@ Section four
 @media (min-width: 768px) {
   .become__content--bullet {
     margin: 15px -3%;
+  }
+}
+
+@media (min-width: 960px) {
+  .become__content--bullet {
+    margin: 10px -40px;
   }
 }
 
