--- a/jade/index.jade
+++ b/jade/index.jade
@@ -122,3 +122,4 @@ html(lang="en")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js")
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     script(src="js/headerBulletMenu__hide-show.js")
+    script(src="js/fourBecomeContentBack__autoResize.js")
